# deploy-practice

./: CMakeLists.txt  Dockerfile  main.cpp
.github/workflows/: aws-docker.yml  ci.yml  docker_cicd.yml
lib/: CMakeLists.txt
lib/structlib/: CMakeLists.txt
lib/structlib/include/: SVBase.h  SVString.h
lib/structlib/src/: SVBase.cpp  SVString.cpp
tests/: test_svstring.cpp
